// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms all products and the order when every product has sufficient stock: 0_RESPONSE_BODY 1`] = `
{
  "id": 1,
  "products": [
    {
      "id": 1,
      "productId": 1,
      "status": {
        "color": "35FF69",
        "id": "confirmed",
        "name": "Confirmed",
      },
    },
    {
      "id": 2,
      "productId": 1,
      "status": {
        "color": "35FF69",
        "id": "confirmed",
        "name": "Confirmed",
      },
    },
    {
      "id": 3,
      "productId": 2,
      "status": {
        "color": "35FF69",
        "id": "confirmed",
        "name": "Confirmed",
      },
    },
  ],
  "status": {
    "color": "35FF69",
    "id": "confirmed",
    "name": "Confirmed",
  },
}
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms all products and the order when every product has sufficient stock: 1_ORDERS 1`] = `
[
  {
    "status_id": "confirmed",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms all products and the order when every product has sufficient stock: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": 1,
    "status_id": "confirmed",
  },
  {
    "id": 2,
    "status_id": "confirmed",
  },
  {
    "id": 3,
    "status_id": "confirmed",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms all products and the order when every product has sufficient stock: 3_PRODUCT_STOCK 1`] = `
[
  {
    "order_product_id": 1,
    "quantity": -1,
  },
  {
    "order_product_id": 2,
    "quantity": -1,
  },
  {
    "order_product_id": 3,
    "quantity": -1,
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms only products with available stock and leaves the order pending: 0_RESPONSE_BODY 1`] = `
{
  "id": 2,
  "products": [
    {
      "id": 4,
      "productId": 3,
      "status": {
        "color": "35FF69",
        "id": "confirmed",
        "name": "Confirmed",
      },
    },
    {
      "id": 5,
      "productId": 3,
      "status": {
        "color": "35FF69",
        "id": "confirmed",
        "name": "Confirmed",
      },
    },
    {
      "id": 6,
      "productId": 3,
      "status": {
        "color": "44CCFF",
        "id": "pending",
        "name": "Pending",
      },
    },
  ],
  "status": {
    "color": "44CCFF",
    "id": "pending",
    "name": "Pending",
  },
}
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms only products with available stock and leaves the order pending: 1_ORDERS 1`] = `
[
  {
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms only products with available stock and leaves the order pending: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": 4,
    "status_id": "confirmed",
  },
  {
    "id": 5,
    "status_id": "confirmed",
  },
  {
    "id": 6,
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm confirms only products with available stock and leaves the order pending: 3_PRODUCT_STOCK 1`] = `
[
  {
    "order_product_id": 4,
    "quantity": -1,
  },
  {
    "order_product_id": 5,
    "quantity": -1,
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm leaves everything pending when there is no stock for any product: 0_RESPONSE_BODY 1`] = `
{
  "id": 3,
  "products": [
    {
      "id": 7,
      "productId": 4,
      "status": {
        "color": "44CCFF",
        "id": "pending",
        "name": "Pending",
      },
    },
  ],
  "status": {
    "color": "44CCFF",
    "id": "pending",
    "name": "Pending",
  },
}
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm leaves everything pending when there is no stock for any product: 1_ORDERS 1`] = `
[
  {
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm leaves everything pending when there is no stock for any product: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": 7,
    "status_id": "pending",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm leaves everything pending when there is no stock for any product: 3_PRODUCT_STOCK 1`] = `[]`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm returns 400 when the order is already confirmed: 0_RESPONSE_BODY 1`] = `
{
  "error": "Bad Request",
  "message": "Order #4 cannot be confirmed: expected status "pending", got "confirmed"",
  "statusCode": 400,
}
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm returns 400 when the order is already confirmed: 1_ORDERS 1`] = `
[
  {
    "status_id": "confirmed",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm returns 400 when the order is already confirmed: 2_ORDER_PRODUCTS 1`] = `
[
  {
    "id": 8,
    "status_id": "confirmed",
  },
]
`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm returns 400 when the order is already confirmed: 3_PRODUCT_STOCK 1`] = `[]`;

exports[`Retail Inventory System API PUT /api/order/:id/confirm returns 404 when the order does not exist: 0_RESPONSE_BODY 1`] = `
{
  "error": "Not Found",
  "message": "Order #0 not found",
  "statusCode": 404,
}
`;
